<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Akiramenai</string>
    <string name="read1">Онъёми</string>
    <string name="read2">Кунъёми</string>
    <string name="translate">Перевод</string>
    <string name="paint">Начертание</string>
    <string name="testlbl">Тесты</string>
    <string name="nextlbl">&gt;&gt;&gt;</string>
    <string name="prevlbl">&lt;&lt;&lt;</string>
    <string name="randsign">Случайный</string>
    <string name="lexlbl">Активные словари</string>
    <string name="n5lbl">n5</string>
    <string name="n4lbl">n4</string>
    <string name="howmuchlbl">Количество вопросов</string>
    <string name="stattestlbl">Новый тест</string>
    <string name="signstypelbl">Транскрипция</string>
    <string name="plusstr">+</string>
    <string name="minusstr">-</string>
    <string name="questno">3</string>
    <string name="timerheadlbl">Время на ответ (секунды)</string>
    <string name="timerdef">30</string>
    <string name="testbodyheadline">Тест</string>
    <string name="testprepheadline">Настройка теста</string>
    <string name="statisticsheadline">Статистика</string>
    <string name="tutoringheadline">Обучение</string>
    <string name="test_amount_label">Всего выполнено тестов:</string>
    <string name="question_amount_label">Общее количество вопросов:</string>
    <string name="right_answers_label">Правильных ответов:</string>
    <string name="right_answers_percent_label">Процент правильных ответов:</string>
    <string name="n5summary">Словарь уровня N5</string>
    <string name="choosetranscr">Транскрипция</string>
    <string name="settingsheadline">Настройки</string>
    <string name="hello">d30 Studio</string>
    <string name="amount_summary">Количество вопросов в тесте по умолчанию</string>
    <string name="timer_set_summary">Количество секунд по умолчанию для выбора ответа</string>
    <string name="on_amount">Выполнено заданий по онъёми:</string>
    <string name="stat_cat_general">Общая статистика</string>
    <string name="stat_cat_on">Статистика по онъёми</string>
    <string name="stat_cat_kun">Статистика по кунъёми</string>
    <string name="kun_amount">Выполнено заданий по кунъёми:</string>
    <string name="stat_cat_trans">Статистика по переводу</string>
    <string name="trans_amount">Выполнено заданий по переводу</string>
    <string name="on_title">Задания по онъёми</string>
    <string name="on_summary">Использовать в тестах задания на выбор правильного онного чтения</string>
    <string name="kun_title">Задания по кунъёми</string>
    <string name="kun_summary">Использовать в тестах задания на выбор правильного кунного чтения</string>
    <string name="trans_title">Задания по переводу</string>
    <string name="trans_summary">Использовать в тестах задания на выбор правильного перевода</string>
    <string name="kandji">Кандзи</string>
    <string name="dialog_edit_title">Новое значение</string>
    <string name="tablet_label_manage">Управление</string>
    <string name="tablet_label_navigation">Навигация</string>
    <string name="stats_clean">Обнулить статистику</string>
    <string name="show_right_answers_label">Показывать правильные ответы</string>
    <string name="show_right_answers_summary">Подсвечивать правильный ответ даже при выборе неправильного варианта</string>
    <string name="about_headline">О программе</string>
    <string name="app_version">Версия 1.1 (build 290813)</string>
    <string name="app_about">Приложение для помощи в изучении японского языка и подготовке к экзамену Нихонго норёку сикэн (Japanese-Language Proficiency Test).</string>
    <string name="app_developers_title">Разработка:</string>
    <string name="app_developers_2">Идея и подготовка словарей:</string>
    <string name="app_developers_3">Тестирование:</string>
    <string name="app_developers_1">Программирование и интерфейс:</string>
    <string name="app_materials">Материалы:</string>
    <string name="examples_button_title">Примеры употребления</string>
    <string name="app_lists">Списки уровней N5 и N4</string>
    <string name="app_link_lists">http://en.wikibooks.org/wiki/JLPT_Guide</string>
    <string name="app_link_stroke_order">http://commons.wikimedia.org/wiki/Commons:Stroke_Order_Project/Kangxi_radicals</string>
    <string name="app_stroke_order">Порядок начертания</string>
    <string name="app_license_title">Лицензия</string>
    <string name="app_full_text">Полный текст лицензии</string>
    <string name="app_cc_by_nc_sa">Приложение распространяется по лицензии Creative Commons Attribution-NonCommercial-ShareAlike 3.0</string>
    <string name="app_cc_by_sa">Материалы распространяются по лицензии Creative Commons Attribution-ShareAlike 3.0</string>
    <string name="app_logo_description">Логотип приложения</string>
    <string name="app_about_dev_blog">Подробная информация и контакт с разработчиками:</string>
    <string name="app_dev_ya">Д. Яруллин</string>
    <string name="app_dev_ir">И. Иванова</string>
    <string name="app_dev_eg">Е. Федюков</string>
    <string name="app_dev_blog_ref">http://akiramenai.ru</string>
    <string name="app_dev_logo">Akiramenai</string>
    <string name="transcr_summary">Выберите используемую транскрипцию</string>
    <string name="prefs_transcr_dial_title">Выберите транскрипцию</string>
</resources>
