<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/previousbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/prevlbl" />

        <Button
            android:id="@+id/randbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/randsign" />

        <Button
            android:id="@+id/nextbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nextlbl" />

    </LinearLayout>

    <EditText
        android:id="@+id/mainfield"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none" >

        <requestFocus />
    </EditText>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.60" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/pic_lay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/mainpic"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/kandji"
                    android:scaleType="fitCenter" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/onreading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read1" />

        <Button
            android:id="@+id/kunreading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read2" />

    </TableRow>

    <TableRow
        android:id="@+id/TableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/translatebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate" />

        <Button
            android:id="@+id/writebtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/paint" />

    </TableRow>

</LinearLayout>