<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="15dp" >

<ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" ><ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:paddingBottom="24dp"
                android:scaleType="fitCenter"
                android:src="@drawable/z_app_mascot" />

        <Button
            android:id="@+id/starttutoringbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/tutoringheadline" />

        <Button
            android:id="@+id/starttestbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/testlbl" />

        <Button
            android:id="@+id/startsettingsbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/settingsheadline" />

        <Button
            android:id="@+id/startaboutbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_headline" /><TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/hello"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12dp" />

    </LinearLayout>

</ScrollView>

</LinearLayout>