<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/statline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/readybtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stattestlbl" />

                <Button
                    android:id="@+id/ststbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statisticsheadline" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/countsettings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/testheadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/howmuchlbl"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp" >

                    <EditText
                        android:id="@+id/questnmb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:maxLength="6"
                        android:text="@string/questno" >

                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/questplus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/plusstr" />

                    <Button
                        android:id="@+id/questminus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/minusstr" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timersettings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/timerheadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/timerheadlbl"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp" >

                    <EditText
                        android:id="@+id/timersec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:maxLength="6"
                        android:text="@string/timerdef" />

                    <Button
                        android:id="@+id/timerplus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/plusstr" />

                    <Button
                        android:id="@+id/timerminus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/minusstr" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>